template -mf +{{m|f}} <island#3224501>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -10,18 +10,18 @@
 {{OE.}} [[īġland]].  The S was added by confusion with French ''[[isle]]'', which is not related but is instead from Latin ''[[insula]]''.  Cognate with German ''[[Aue]]'', "water-meadow", and Latin ''[[aqua]]''.  Compare German ''[[Eiland]]'', Old Norse ''[[eyland]]'', and English ''[[ey]]'' as in [[Anglesey]], [[Bardsey]], [[Ely]].
 
 ===Pronunciation===
-*{{audio|en-us-island.ogg|Audio (US)}}
-*:[[Rhymes:English:-ænd|Rhymes: -ænd]]
+* {{audio|en-us-island.ogg|Audio (US)}}
+*: [[Rhymes:English:-ænd|Rhymes: -ænd]]
 
 ===Noun===
 {{en-noun}}
 
 # An [[area]] of [[land]] totally [[surround]]ed by [[water]].
 # An [[entity]] [[surround]]ed by other entities that are very [[different]] from itself.
-#:''an [[island]] of tranquility'' (a calm place surrounded by a noisy environment)
+#: ''an [[island]] of tranquility'' (a calm place surrounded by a noisy environment)
 
 ====Synonyms====
-*{{italbrac-colon|an entity surrounded by other very different entities}} [[oasis]]
+* {{italbrac-colon|an entity surrounded by other very different entities}} [[oasis]]
 
 ====Derived terms====
 * [[islander]]
@@ -46,7 +46,7 @@
 *Greek: {{t+|el|νησί|n|}} (nisí)
 *Hebrew: {{he-translation|אי|i|wv=אִי}} {{m}}
 *[[Lower Sorbian]]: [[kupa]] {{f}}
-*Norwegian: [[øy]] {{mf}}
+*Norwegian: [[øy]] {{m|f}}
 *Polish: {{t+|pl|wyspa}} {{f}}
 *Russian: [[остров]] (óstrov) {{m}}
 *Slovene: [[otok]] {{m}}
@@ -66,7 +66,7 @@
 {{trans-mid}}
 *Hebrew: {{he-translation|אי|i|wv=אִי}} {{m}}
 *Japanese: [[島]] ([[しま]], shimá)
-*Norwegian: [[øy]] {{mf}}
+*Norwegian: [[øy]] {{m|f}}
 *Polish: {{t+|pl|wyspa}} {{f}}
 *Russian: [[остров]] (óstrov) {{m}}
 *Slovene: [[otok]] {{m}}
@@ -76,57 +76,57 @@
 =====Translations to be checked=====
 {{checktrans}}
 {{trans-top|translations to be checked}}
-*{{ttbc|Ainu}}: [[モシリ|モシ<span style="font-size:70%;">リ</span>]] (moshir)
-*{{ttbc|Arabic}}: {{ARchar|[[جزيرة|جَزِيرَة]]}} {{unicode|(jazīra)}} {{f}}, {{ARchar|[[جزائر|جَزَائِر]]}} {{unicode|(jazā’ir)}} {{p}}, {{ARchar|[[جزر|جُزُر]]}} (júzur) {{p}}
-*{{ttbc|Basque}}: [[irla]], [[uharte]]
-*{{ttbc|Bosnian}}: [[ostrvo#Bosnian|ostrvo]] {{n}}
-*{{ttbc|Catalan}}: [[illa]] {{f}}
-*{{ttbc|Chinese}}: [[島]] (dǎo)
-*{{ttbc|Dutch}}: [[eiland]] {{n}}, eilanden {{p}}
-*{{ttbc|Esperanto}}: [[insulo]]
-*{{ttbc|Estonian}}: [[saar]], [[saared]] {{p}}
-*{{ttbc|Fijian}}: [[yanuyanu]]
-*{{ttbc|Greek, Ancient}}: [[νήσος]] (nísos) {{f}}
-*{{ttbc|Hungarian}}: [[sziget]]
-*{{ttbc|Icelandic}}: [[eyja]], [[eyland]]
-*{{ttbc|Ido}}: [[insulo]]
-*{{ttbc|Ilocano}}: [[puro]]
-*{{ttbc|Indonesian}}: [[pulau]], [[nusa]]
-*{{ttbc|Interlingua}}: [[insula]]
-*{{ttbc|Irish}}: [[oileán]] ''m1''
-*{{ttbc|Italian}}: [[isola]] {{f}}
+* {{ttbc|Ainu}}: [[モシリ|モシ<span style="font-size:70%;">リ</span>]] (moshir)
+* {{ttbc|Arabic}}: {{ARchar|[[جزيرة|جَزِيرَة]]}} {{unicode|(jazīra)}} {{f}}, {{ARchar|[[جزائر|جَزَائِر]]}} {{unicode|(jazā’ir)}} {{p}}, {{ARchar|[[جزر|جُزُر]]}} (júzur) {{p}}
+* {{ttbc|Basque}}: [[irla]], [[uharte]]
+* {{ttbc|Bosnian}}: [[ostrvo#Bosnian|ostrvo]] {{n}}
+* {{ttbc|Catalan}}: [[illa]] {{f}}
+* {{ttbc|Chinese}}: [[島]] (dǎo)
+* {{ttbc|Dutch}}: [[eiland]] {{n}}, eilanden {{p}}
+* {{ttbc|Esperanto}}: [[insulo]]
+* {{ttbc|Estonian}}: [[saar]], [[saared]] {{p}}
+* {{ttbc|Fijian}}: [[yanuyanu]]
+* {{ttbc|Greek, Ancient}}: [[νήσος]] (nísos) {{f}}
+* {{ttbc|Hungarian}}: [[sziget]]
+* {{ttbc|Icelandic}}: [[eyja]], [[eyland]]
+* {{ttbc|Ido}}: [[insulo]]
+* {{ttbc|Ilocano}}: [[puro]]
+* {{ttbc|Indonesian}}: [[pulau]], [[nusa]]
+* {{ttbc|Interlingua}}: [[insula]]
+* {{ttbc|Irish}}: [[oileán]] ''m1''
+* {{ttbc|Italian}}: [[isola]] {{f}}
 {{trans-mid}}
-*{{ttbc|Korean}}: [[섬]] (seom)
-*{{ttbc|Kurdish}}: [[girav]], [[dûrge]]
-*{{ttbc|Latin}}: [[insula]] {{f}}, insulae {{p}}
-*{{ttbc|Latvian}}: [[sala]] {{f}}
-*{{ttbc|Lithuanian}}: [[sala]] {{f}}
-*{{ttbc|Malay}}: [[pulau]]
-*{{ttbc|Maori}}: [[motu]]
-*{{ttbc|Old English}}: [[ieg|īeġ]] {{f}}
-*{{ttbc|Persian}}: {{FAchar|[[جزیره|جَزِیرَه]]}} (jazireh)
-*{{ttbc|Portuguese}}: [[ilha]] {{f}}, ilhas {{p}}
-*{{ttbc|Romanian}}: [[insulã]] {{f}}, [[insule]] {{p}}
-*{{ttbc|Sardinian}}: [[isula]] {{f}}
-*{{ttbc|Scottish Gaelic}}: [[eilean]] {{m}}, [[innis]] ''f (less common)''
-*{{ttbc|Serbian}}
-:Cyrillic: [[острво#Serbian|острво]] {{n}}
-:Roman: [[ostrvo#Serbian|ostrvo]] {{n}}
-*{{ttbc|Slovak}}: [[ostrov]] {{m}}
-*{{ttbc|Spanish}}: [[isla]] {{f}}, islas {{p}}
-*{{ttbc|Tagalog}}: [[pulo]]
-*{{ttbc|Telugu}}: [[దీవి]] (dIvi), [[ద్వీపం]] (dveepaM)
-*{{ttbc|Turkish}}: [[ada]]
-*{{ttbc|Volapük}}: [[nisul]]
+* {{ttbc|Korean}}: [[섬]] (seom)
+* {{ttbc|Kurdish}}: [[girav]], [[dûrge]]
+* {{ttbc|Latin}}: [[insula]] {{f}}, insulae {{p}}
+* {{ttbc|Latvian}}: [[sala]] {{f}}
+* {{ttbc|Lithuanian}}: [[sala]] {{f}}
+* {{ttbc|Malay}}: [[pulau]]
+* {{ttbc|Maori}}: [[motu]]
+* {{ttbc|Old English}}: [[ieg|īeġ]] {{f}}
+* {{ttbc|Persian}}: {{FAchar|[[جزیره|جَزِیرَه]]}} (jazireh)
+* {{ttbc|Portuguese}}: [[ilha]] {{f}}, ilhas {{p}}
+* {{ttbc|Romanian}}: [[insulã]] {{f}}, [[insule]] {{p}}
+* {{ttbc|Sardinian}}: [[isula]] {{f}}
+* {{ttbc|Scottish Gaelic}}: [[eilean]] {{m}}, [[innis]] ''f (less common)''
+* {{ttbc|Serbian}}
+: Cyrillic: [[острво#Serbian|острво]] {{n}}
+: Roman: [[ostrvo#Serbian|ostrvo]] {{n}}
+* {{ttbc|Slovak}}: [[ostrov]] {{m}}
+* {{ttbc|Spanish}}: [[isla]] {{f}}, islas {{p}}
+* {{ttbc|Tagalog}}: [[pulo]]
+* {{ttbc|Telugu}}: [[దీవి]] (dIvi), [[ద్వీపం]] (dveepaM)
+* {{ttbc|Turkish}}: [[ada]]
+* {{ttbc|Volapük}}: [[nisul]]
 {{trans-bottom}}
 
 ===See also===
-*[[archipelago]]
-*[[atoll]]
-*[[cay]]
-*[[continent]]
-*[[key]]
-*[[Island]] - [[Iceland]] in other languages
+* [[archipelago]]
+* [[atoll]]
+* [[cay]]
+* [[continent]]
+* [[key]]
+* [[Island]] - [[Iceland]] in other languages
 
 [[Category:1000 English basic words]]
 
