--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -71,9 +71,10 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 *German: [[obwohl]]
 *Greek: [[έστω και αν]] (esto ke an), [[αν και]] (an ke), [[μολονότι]] (molonoti), [[καίτοι]] (keti)
 *Icelandic: [[þó]], [[þótt]]
-{{trans-mid}}
 *Indonesian: [[walau]], [[meski]]
 *Italian: [[anche]] [[se]]
+{{trans-mid}}
+*Polish: [[chociaż]]
 *Portuguese: [[apesar]] de
 *Romanian: [[desi]], de [[parca]]
 *Russian: [[хотя]], [[хоть и]], [[несмотря на то, что]]
