--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -74,7 +74,7 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 *Indonesian: [[walau]], [[meski]]
 *Italian: [[anche]] [[se]]
 {{trans-mid}}
-*Polish: [[chociaż]]
+*Polish: [[choć]], [[chociaż]]
 *Portuguese: [[apesar]] de
 *Romanian: [[desi]], de [[parca]]
 *Russian: [[хотя]], [[хоть и]], [[несмотря на то, что]]
