--- a/en/p/pinot.745862.wikitext
+++ b/en/p/pinot.745862.wikitext
@@ -12,4 +12,13 @@
 *[[pinot gris]], [[pinot grigio]]
 *[[pinot noir]], [[pinot nero]]
 
+----
+
+==Finnish==
+
+===Noun===
+'''pinot'''
+
+# {{plural of|pino|lang=Finnish}}
+
 [[et:pinot]]
