--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -14,7 +14,7 @@ Old English ''[[stæf]]''
 # ''(plural:'' '''staffs''' ''or'' '''staves''''')''  a [[long]], [[straight]] [[stick]], especially one used to assist in walking.
 # ''(plural:'' '''staves''''')'' a [[series]] of [[horizontal]] [[line]]s on which [[music]]al [[note]]s are written.
 # ''(plural:'' '''staff''''')'' the [[employee]]s of a [[business]]. (e.g. The company employed 10 new staff this month.)
-
+# a wizard's main tool for spells (e.g. The wizard used a wind staff.)
 ====Synonyms====
 *[[stave]] (2)
 *[[personnel]] (3)
