--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -9,7 +9,7 @@
 Old English ''[[stæf]]''
 
 ===Noun===
-'''staff''' (pl. ''staffs'' or ''staves'')
+'''staff''' (pl. ''[[staffs]]'' or ''[[staves]]'')
 
 # ''(plural:'' '''staffs''' ''or'' '''staves''''')''  a [[long]], [[straight]] [[stick]], especially one used to assist in walking.
 # ''(plural:'' '''staves''''')'' a [[series]] of [[horizontal]] [[line]]s on which [[music]]al [[note]]s are written.
