--- a/en/m/musclebrain.746557.wikitext
+++ b/en/m/musclebrain.746557.wikitext
@@ -11,6 +11,6 @@ From {{term|muscle}} + {{term|brain}}
 
 ====Synonyms====
 * {{sense|participant in physical sports}} [[athlete]]
-* {{sense|idiot}} [[bruiser]], [[dumbbell]], [[moron]], [[buffoon]], [[dimwit]], [[pinhead]], [[meathead]], [[birdbrain]], [[peabrain]], [[goon]], [[dummy]]
+* {{sense|idiot}} [[bruiser]], [[dumbbell]], [[moron]], [[buffoon]], [[dimwit]], [[pinhead]], [[meathead]], [[birdbrain]], [[peabrain]], [[goon]], [[dummy]], [[dipstick]]
 
 [[Category:Sports]]
