--- a/en/l/lentor.801178.wikitext
+++ b/en/l/lentor.801178.wikitext
@@ -3,7 +3,8 @@
 ===Noun===
 {{en-noun|-}}
 
-# Slowness, slugishness
+# [[slowness]], [[slugishness]]
+#{{context|obsolete|physics}} [[viscosity]]
 
 ====Quotations====
 #"...she walked through dilating space with the '''lentor''' of one walking under water..." &mdash; Nabakov's Lolita, 1955
