/* Idiom */ Chaucer quote needs to be checked for original wording <due course#3242893>

--- a/en/d/due course.801536.wikitext
+++ b/en/d/due course.801536.wikitext
@@ -1,5 +1,6 @@
 == English ==
 === Idiom ===
+{{idiom}}
 '''[[due]] [[course]]'''
 
 # At the appropriate time
@@ -7,3 +8,5 @@
 #* '''1850''' Nathaniel Hawthorne, ''The Scarlet Letter''
 #*: Day by day, nevertheless, their sour and rigid wrinkles were relaxing into something which, in the '''due course''' of years, might grow to be an expression of almost benevolence.
 # Eventually
+#* ''a''. '''1399''', Geoffrey Chaucer, ''The Canterbury Tales''
+#*: You all know that in the '''due course''' of time / If you continue scratching on a stone, / Little hy little some image thereon / Will he engraven.
