/* Idiom */ def not right <due course#3242903>

--- a/en/d/due course.801536.wikitext
+++ b/en/d/due course.801536.wikitext
@@ -3,10 +3,10 @@
 {{idiom}}
 '''[[due]] [[course]]'''
 
-# At the appropriate time
-# After an appropriate interval of time
-#* '''1850''' Nathaniel Hawthorne, ''The Scarlet Letter''
-#*: Day by day, nevertheless, their sour and rigid wrinkles were relaxing into something which, in the '''due course''' of years, might grow to be an expression of almost benevolence.
-# Eventually
+# Appropriate occurence
 #* ''a''. '''1399''', Geoffrey Chaucer, ''The Canterbury Tales''
 #*: You all know that in the '''due course''' of time / If you continue scratching on a stone, / Little by little some image thereon / Will he engraven.
+#* ''a''. '''1735''', Jonathan Swift, ''Gulliver's Travels''
+#*: This is all according to the '''due Course''' of Things: […].
+#* '''1850''' Nathaniel Hawthorne, ''The Scarlet Letter''
+#*: Day by day, nevertheless, their sour and rigid wrinkles were relaxing into something which, in the '''due course''' of years, might grow to be an expression of almost benevolence.
