--- a/en/d/due course.801536.wikitext
+++ b/en/d/due course.801536.wikitext
@@ -7,5 +7,5 @@
 #*: You all know that in the '''due course''' of time / If you continue scratching on a stone, / Little by little some image thereon / Will he engraven.
 #* ''a''. '''1735''', Jonathan Swift, ''Gulliver's Travels''
 #*: This is all according to the '''due Course''' of Things: […].
-#* '''1850''' Nathaniel Hawthorne, ''The Scarlet Letter''
+#* '''1850''', Nathaniel Hawthorne, ''The Scarlet Letter''
 #*: Day by day, nevertheless, their sour and rigid wrinkles were relaxing into something which, in the '''due course''' of years, might grow to be an expression of almost benevolence.
