<rules of the road#3242917>

--- a/en/r/rules of the road.801538.wikitext
+++ b/en/r/rules of the road.801538.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Noun===
 {{en-noun|-}}
-#The [[law]]s which govern [[driving]]. Most civilised countries drive on the right.
+#The [[law]]s which govern [[driving]]. About 10% of the world's population and India drive on the left.
