--- a/en/s/skyhook.801551.wikitext
+++ b/en/s/skyhook.801551.wikitext
@@ -1,9 +1,8 @@
 ==English==
 
 ===Noun===
+{{wikipedia|Skyhook (disambiguation)}}
 {{en-noun}}
-A skyhook is defined by Dictionary.com as a "fanciful hook imagined to be suspended in the air." Of course, there is no actual hook. This word is a metaphorical euphemism describing anything that takes one out of his/her lesser conditions and flings that person into some better place, so to speak. For example, in ''Songs of the Doomed'', by Hunter S. Thompson, he refers to himself as a skyhook to a prisoner whom Hunter intends to help "escape the System". A skyhook is an "out". Other similar euphemisms might be "a ticket to ride", or "a foot in the door", etc.
-# {{substub}}
 
-===References===
-See the Works of Hunter S. Thompson, I'm not sure if he coined the term or not.
+# An imaginary [[hook]] suspended in the air
+# A [[helicopter]] that lifts and transports heavy objects suspended by a heavy cable
