--- a/en/s/skyhook.801551.wikitext
+++ b/en/s/skyhook.801551.wikitext
@@ -1,8 +1,24 @@
 ==English==
 
+===Pronunciation===
+{{IPA|/ˈskaɪˌhʊk/}}
+
 ===Noun===
-{{wikipedia|Skyhook (disambiguation)}}
+{{wikipedia}}
 {{en-noun}}
 
 # An imaginary [[hook]] suspended in the air
 # A [[helicopter]] that lifts and transports heavy objects suspended by a heavy cable
+
+====Translations====
+{{trans-top|imaginary hook suspended in the air}}
+*German: {{trad|de|Skyhook}} {{g|German}}
+*Finnish: {{trad|fi|avaruuskoukku}}
+{{trans-mid}}
+{{trans-bot}}
+
+{{trans-top|a helicopter that lifts and transports heavy objects}}
+*German: {{trad|de|Skyhook}} {{g|German}}
+*Finnish: {{trad|fi|avaruuskoukku}}
+{{trans-mid}}
+{{trans-bot}}
