--- a/en/d/due course.801536.wikitext
+++ b/en/d/due course.801536.wikitext
@@ -2,9 +2,11 @@
 === Idiom ===
 '''[[due]] [[course]]'''
 
-# {{idiom}} Appropriate occurence
+# {{idiom}} Regular or appropriate passage or occurence
 #* ''a''. '''1399''', Geoffrey Chaucer, ''The Canterbury Tales''
 #*: You all know that in the '''due course''' of time / If you continue scratching on a stone, / Little by little some image thereon / Will he engraven.
+#* '''1590''', William Shakespeare, ''The Winter's Tale''
+#*: Let us be cleared Of being tyrannous, since we so openly / Proceed in justice, which shall have '''due course''', / Even to the guilt or the purgation. 
 #* ''a''. '''1735''', Jonathan Swift, ''Gulliver's Travels''
 #*: This is all according to the '''due Course''' of Things: […].
 #* '''1850''', Nathaniel Hawthorne, ''The Scarlet Letter''
