--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -45,20 +45,30 @@ From {{OF.}} ''[[plege]]'' (French: ''[[pleige]]'').
 
 ====Translations====
 {{trans-top|solemn promise}}
+*Arabic: {{Arab|[[ضمان]]}} {{IPAchar|(ɖamān)}} {{m}}
+*Chinese: [[誓言]] (shìyán)
+*Dutch: [[pand]] {{n}}
 *Finnish: [[lupaus]]
-*Italian: [[giuramento]], [[promessa solenne]]
-*Kurdish: {{KUchar|[[په‌یمان]]}}
-*Português: [[promessa]] {{f}}
+*French: [[gage]] {{m}}
+*German: [[Pfand]] {{n}}
+*Hungarian: [[tagjelölt]], [[áldomás]]
+*Italian: [[giuramento]] {{m}}, [[pegno]] {{m}}, [[promessa solenne]] {{f}}
+*Japanese: [[抵当]] (ていとう, teitō)
 {{trans-mid}}
-*Serbian: [[zavet]]
+*Korean: [[서약]] (seoyak)
+*Kurdish: {{KUchar|[[په‌یمان]]}}
+*Portuguese: [[promessa]] {{f}}
+*Russian: [[залог]] (zalóg) {{m}}
+*Serbian: [[zavet]] {{m}}
 *Slovene: [[zaprisega]] {{f}}, [[zaobljuba]] {{f}}
-*Spanish: [[juramento]], [[promesa solemne]]
+*Spanish: [[juramento]] {{m}}, [[promesa solemne]] {{f}}
+*Swedish: [[underpant]] {{c}}
 *[[Telugu]]: [[ప్రతిజ్ఞ]] (prathigna), [[ప్రతిన]] (prathina)
 {{trans-bottom}}
 
 {{trans-top|security to payment}}
 *Finnish: [[pantti]]
-*Italian: [[avallo]], [[garanzia]]
+*Italian: [[avallo]] {{m}}, [[garanzia]] {{f}}
 {{trans-mid}}
 *[[Telugu]]: [[తనఖా]] (tanakhaa)
 {{trans-bottom}}
