--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -57,11 +57,11 @@ From {{OF.}} ''[[plege]]'' (French: ''[[pleige]]'').
 {{trans-mid}}
 *Korean: [[서약]] (seoyak)
 *Kurdish: {{KUchar|[[په‌یمان]]}}
-*Portuguese: [[promessa]] {{f}}
+*Portuguese: [[promessa]] {{f}}, [[penhor]] {{m}}
 *Russian: [[залог]] (zalóg) {{m}}
 *Serbian: [[zavet]] {{m}}
 *Slovene: [[zaprisega]] {{f}}, [[zaobljuba]] {{f}}
-*Spanish: [[juramento]] {{m}}, [[promesa solemne]] {{f}}
+*Spanish: [[juramento]] {{m}}, [[promesa]] [[solemne]] {{f}}
 *Swedish: [[underpant]] {{c}}
 *[[Telugu]]: [[ప్రతిజ్ఞ]] (prathigna), [[ప్రతిన]] (prathina)
 {{trans-bottom}}
