--- a/en/s/summerlike.801705.wikitext
+++ b/en/s/summerlike.801705.wikitext
@@ -1,16 +1,17 @@
 ==English==
-===Forms and variants===
-*[[summer-like]]
+
+===Alternative forms===
+* [[summer-like]]
 
 ===Adjective===
 {{en-adj}}
 
-#Of a day or the weather, resembling or characteristic of summer.
+# Of a day or the weather, resembling or characteristic of summer.
 
 ====Synonyms====
-*[[summerish]]
-*[[summerly]]
-*[[summery]]
+* [[summerish]]
+* [[summerly]]
+* [[summery]]
 
 ====Antonyms====
-*[[unsummerlike]]
+* [[unsummerlike]]
