--- a/en/s/sabre-toothed.801836.wikitext
+++ b/en/s/sabre-toothed.801836.wikitext
@@ -1,4 +1,6 @@
 ==English==
 ===Adjective===
-#Having [[razor-sharp]] fangs.
-#:''My god, that [[vampire]] is quite '''sabre-toothed''' isn't he?''
+# Of or pertaining to prehistoric creatures with savage [[teeth]].
+
+====Derived terms====
+*[[sabre-toothed tiger]]
