/* Noun */ +related <mackle#3243747>

--- a/en/m/mackle.801840.wikitext
+++ b/en/m/mackle.801840.wikitext
@@ -5,6 +5,9 @@
 
 # A blurred or double [[impression]] in [[printing]].
 
+====Related terms====
+*[[macule]]
+
 ===Verb===
 #To blur, or be blurred, in printing, as if there were a double impression.
 
