--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -34,6 +34,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 * [[agendum]]
 * [[antebellum]] (''before war'')
 * [[aquarium]]]
+* [[binomium]]
 * [[castellum]]
 * [[conservatorium]]
 * [[continuum]]
@@ -62,6 +63,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 * [[opium]]
 * [[optimum]]
 {{rel-mid4}}
+* [[Persarum]]
 * [[pessarium]]
 * [[podium]]
 * [[postbellum]] (''after war'')
