--- a/en/c/cyclostylar.802188.wikitext
+++ b/en/c/cyclostylar.802188.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
-===Adjectives===
+===Adjective===
 {{en-adj}}
 
 # {{architecture}} Of or pertaining to a [[cyclostyle]] (a circular group of columns without a core).
