added inflection line for English/Noun, added inflection line for English/Verb <rough and tumbles#3244584>

--- a/en/r/rough and tumbles.802190.wikitext
+++ b/en/r/rough and tumbles.802190.wikitext
@@ -1,6 +1,11 @@
 ==English==
+
 ===Noun===
+{{infl|en|noun}}[[Category:English nouns that lack inflection template]]
+
 # {{plural of|rough and tumble}}
 
 ===Verb===
-#{{third-person singular of|rough and tumble}}
+{{infl|en|verb}}[[Category:English verbs that lack inflection template]]
+
+# {{third-person singular of|rough and tumble}}
