--- a/en/r/rough and tumbles.802190.wikitext
+++ b/en/r/rough and tumbles.802190.wikitext
@@ -1,9 +1,7 @@
 ==English==
 
 ===Noun===
-{{infl|en|noun}}[[Category:English nouns that lack inflection template]]
-
-# {{plural of|rough and tumble}}
+{{plural of|rough and tumble}}
 
 ===Verb===
 {{infl|en|verb}}[[Category:English verbs that lack inflection template]]
