--- a/en/r/rough and tumbles.802190.wikitext
+++ b/en/r/rough and tumbles.802190.wikitext
@@ -4,6 +4,4 @@
 {{plural of|rough and tumble}}
 
 ===Verb===
-{{infl|en|verb}}[[Category:English verbs that lack inflection template]]
-
-# {{third-person singular of|rough and tumble}}
+{{third-person singular of|rough and tumble}}
