/* Noun */ <slam-bangs#3244596>

--- a/en/s/slam-bangs.802180.wikitext
+++ b/en/s/slam-bangs.802180.wikitext
@@ -1,6 +1,4 @@
 ==English==
 
 ===Noun===
-{{infl|en|noun}}[[Category:English nouns that lack inflection template]]
-
-# {{plural of|slam-bang}}
+{{plural of|slam-bang}}
