--- a/en/c/catch it.802385.wikitext
+++ b/en/c/catch it.802385.wikitext
@@ -1,8 +1,15 @@
 ==English==
 ===Verb===
 {{en-verb}}
-#
-#* '''''', George Bernard Shaw, ''An Unsocial Socialist'' 
+# be severely reprimanded, punished, or beaten
+#* '''1860''', George Eliot , ''The Mill on the Floss''
+#*: "You'll '''catch it''', you know," said Tom, nodding his head in an admonitory manner, and hesitating a little as he took the scissors.
+#* ''a''. '''1887''', George Bernard Shaw, ''An Unsocial Socialist'' 
 #*: If they beat us, we shall '''catch it''', and serve us right.
+#* '''2003''', Sid Fleischman, ''The Whipping Boy'', page 39
+#*: I'll '''catch it''' for your mischief in running away. And I'll '''catch it''' again when the tutor claps eyes on the handwriting.
+
+==See also==
+* [[catch hell]]
 
 [[Category:English verbal phrase]]
