--- a/en/c/Cyzicene.802479.wikitext
+++ b/en/c/Cyzicene.802479.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{L.}} (architecture) ''[[cyzicenus]]'' by {{w:Vitruvius|Vitruvius}}; from the city of ''Cyzicus.''
+Derived from {{L.}} (architecture) ''[[cyzicenus]]'' by [[w:Vitruvius|Vitruvius]]; from the city of ''Cyzicus.''
 
 ===Adjective===
 {{en-adj|-}}
