--- a/en/c/Cyzicene.802479.wikitext
+++ b/en/c/Cyzicene.802479.wikitext
@@ -13,4 +13,4 @@ Derived from {{L.}} (architecture) ''[[cyzicenus]]'' by [[w:Vitruvius|Vitruvius]
 *Hasluck, Frederic W. ''Cyzicus: Being Some Account of the History and Antiquities of that City, and ... '', Harvard University: 1910, p. 192.[http://books.google.com/books?id=McggyWzrvowC&pg=PA192&lpg=PA192&dq]
 * Sturgis, Russel. ''Cyzicene Hall'', in ''A Dictionary of Architecture and Building, Biographical, Historical,...'' MacMillan Co.:1901.[http://books.google.com/books?id=tQgFAAAAYAAJ&pg=RA6-PA738&lpg=RA6-PA738&dq=cyzicenus+architecture&source=web&ots=A64-fbGro6&sig=2q3mn-xfcqY_sNg3DGO3R_7NWB0#PRA6-PA738,M1]
 
-[[Category: Eponyms]]
+[[Category: English eponyms]]
