--- a/en/c/catch it.802385.wikitext
+++ b/en/c/catch it.802385.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Verb===
 {{en-verb|catches it|catch it|caught it}}
-# be severely reprimanded, punished, or beaten
+# {{idiom}} be severely reprimanded, punished, or beaten
 #* '''1860''', George Eliot , ''The Mill on the Floss''
 #*: "You'll '''catch it''', you know," said Tom, nodding his head in an admonitory manner, and hesitating a little as he took the scissors.
 #* ''a''. '''1887''', George Bernard Shaw, ''An Unsocial Socialist'' 
