--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -1,4 +1,4 @@
 =English=
-==Noun==
+===Noun===
 {{en-noun|sg=[[ulterior]] [[motive]]}}
 # A [[secret]] [[alternative]] reason for doing something that differes from the stated reason,
