--- a/en/r/Red Devils.802673.wikitext
+++ b/en/r/Red Devils.802673.wikitext
@@ -1,6 +1,7 @@
 ==English==
 
+===Proper noun===
+{{en-proper noun}}
 
-'''red devils'''
-
+# [[w:Red Devils (Parachute Regiment)|Parachute Regiment]]
 # [[w:Manchester United F.C.|Manchester United F.C.]]
