--- a/en/n/nooner.802769.wikitext
+++ b/en/n/nooner.802769.wikitext
@@ -3,11 +3,14 @@
 ===Noun===
 {{en-noun}}
 
-# {{context|mainly|US}} A [[sexual]] [[encounter]] during lunch hour, especially one which is [[illicit]].
+# {{context|mainly|US|informal}} A [[sexual]] [[encounter]] during lunch hour, especially one which is [[illicit]].
 #*'''1998''', Benjamin Lee, ''Daily Collegian'' (University Wire), State College Pennsylvania, 11 Dec.,
 #*:A simple recess for lunch can turn into a '''nooner'''—a midday sexual encounter.
 #*'''2006''', "[http://www.foxnews.com/story/0,2933,215178,00.html Funnyman Dennis Miller Returns to FNC!]," ''FOX News'', 22 Sep.,
 #*:If you're going to knock off a '''nooner''' with a co-worker at a bad motel you have to scrawl your worn Hancock on the desk blotter.
+
+===See also===
+*[[quickie]]
 
 ===References===
 *''Random House Webster's Unabridged Electronic Dictionary'', 1987-1996.
