--- a/en/p/PALplus.803394.wikitext
+++ b/en/p/PALplus.803394.wikitext
@@ -3,3 +3,4 @@
 {{wikipedia}}
 '''PALplus'''
 # an [[enhanced]] version of the [[PAL]] [[TV]] [[system]] capable of [[transmitting]] pictures in the 16:9 [[widescreen]] [[format]]
+{{rfd}}
