--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -33,7 +33,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 {{rel-top4|Terms which feature the ''-um'' suffix}}
 * [[agendum]]
 * [[antebellum]] (''before war'')
-* [[aquarium]]]
+* [[aquarium]]
 * [[binomium]]
 * [[castellum]]
 * [[conservatorium]]
