--- a/en/s/skyhook.801551.wikitext
+++ b/en/s/skyhook.801551.wikitext
@@ -12,13 +12,13 @@
 
 ====Translations====
 {{trans-top|imaginary hook suspended in the air}}
-* German: {{t|de|Skyhook}} {{g|German}}
+* German: {{t|de|Skyhook}} {{m}}
 * Finnish: {{t|fi|avaruuskoukku}}
 {{trans-mid}}
 {{trans-bot}}
 
 {{trans-top|a helicopter that lifts and transports heavy objects}}
-* German: {{t|de|Skyhook}} {{g|German}}
+* German: {{t|de|Skyhook}} {{m}}
 * Finnish: {{t|fi|avaruuskoukku}}
 {{trans-mid}}
 {{trans-bot}}
