--- a/en/a/a life of its own.803367.wikitext
+++ b/en/a/a life of its own.803367.wikitext
@@ -3,7 +3,7 @@
 '''[[a]] [[life]] [[of]] [[its]] [[own]]'''
 
 # {{idiom}} An independent existence with some characteristics of life.
-#* '''1996'''. Mr. George Steiner, ''Tolstoy or Dostoevsky: An Essay in the Old Criticism'', page 181
+#* '''1996''', George Steiner, ''Tolstoy or Dostoevsky: An Essay in the Old Criticism'', page 181
 #*: Sartre rejects the notion that an imagined character possesses, in any rational sense, "'''a life of its own'''".
 #* '''2002''', John Seely Brown, Paul Duguid, ''The Social Life of Information'', page 18
 #*: […], information takes on not only a speed of its own, but '''a life of its own'''.
