--- a/en/q/quibbly.803406.wikitext
+++ b/en/q/quibbly.803406.wikitext
@@ -11,7 +11,7 @@
 #*:The delineation of civilizations is usually unsatisfactory, often esoteric and sometimes rather '''quibbly'''
 # [[fussy|Fussy]]; [[quibble|quibbling]].
 #*'''1920:''' Gerald Stanley Lee, ''The Ghost in the White House'', p. xv
-#*:We give notice that thousands of our most complacently puttering, most '''quibly''' and fuddling politicans are going to be taken out by the people, lifted up by the people, and dropped kindly but firmly over the edge of the world.
+#*:We give notice that thousands of our most complacently puttering, most '''quibbly''' and fuddly politicans are going to be taken out by the people, lifted up by the people, and dropped kindly but firmly over the edge of the world.
 #*'''1926:''' Charles Robert Gibson, ''Heroes of the Scientific World'', p. 229
 #*:the Quaker said, “I tell thee what, Humphry, thou art the most '''quibbly''' hand at a dispute I ever met with in my life.”
 #*'''1956:''' Edward Hoagland, ''Cat Man'', p. 134
