/* Noun */ +Czech translation <nasal septum#3247617>

--- a/en/n/nasal septum.803472.wikitext
+++ b/en/n/nasal septum.803472.wikitext
@@ -4,3 +4,9 @@
 '''[[nasal]] [[septum]]
 
 # {{anatomy}} A [[septum]] in the nose, separating the left and right airways in the nose, dividing the two nostrils.
+
+====Translations====
+{{trans-top|septum in the nose}}
+*Czech: [[nosní přepážka]] {{f}}
+{{trans-mid}}
+{{trans-bottom}}
