--- a/en/n/nasal septum.803472.wikitext
+++ b/en/n/nasal septum.803472.wikitext
@@ -1,7 +1,7 @@
 ==English==
 {{wikipedia}}
 ===Noun===
-'''[[nasal]] [[septum]]
+{{en-noun|sg=[[nasal]] [[septum]]|nasal septa|pl2=nasal septums}}
 
 # {{anatomy}} A [[septum]] in the nose, separating the left and right airways in the nose, dividing the two nostrils.
 
