--- a/en/e/electro-encephalography.803500.wikitext
+++ b/en/e/electro-encephalography.803500.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
 ===Noun===
-{{en-noun}}
+{{en-noun|electro-encephalographies}}
 
 # {{alternative spelling of|electroencephalography}}
