/* Interjection */ <but seriously folks#3247766>

--- a/en/b/but seriously folks.803515.wikitext
+++ b/en/b/but seriously folks.803515.wikitext
@@ -5,3 +5,7 @@
 # {{idiom}} Directs attention to immediately preceding failed attempt at humor.
 #* '''1969''', Julius J. Epstein, ''But, Seriously ...: A Play in Two Acts'', page 18
 #*: A nightclub comic who gets off a bad joke, nobody laughs, but he goes right on with: "'''But, seriously, folks'''" […].
+#* '''2004''', Gerald Nachman, ''Seriously Funny: The Rebel Comedians of the 1950s and 1960s'', page 23
+#*: '''But seriously, folks''', on behalf of the Copacabana — and believe me, I'd love to be half of the Copacabana
+#* '''2006''', Bob Mitchell, ''Match Made in Heaven'', page 199
+#*: "Take my life, […] please," Colombo continued, a wry smile creasing his face. (Apparently he was a fan of Henny Youngman.) "Badaboom! '''But, seriously, folks''', I learn long ago, during my life, that justice, she does not exist. […]."
