--- a/en/f/four score and seven years ago.803552.wikitext
+++ b/en/f/four score and seven years ago.803552.wikitext
@@ -4,5 +4,5 @@
 In Abraham Lincoln's Gettysburg Address, he used this (at the time) commonplace measure of [[score]], meaning "20 [[year]]s". In modern language, it would be simply "27 years ago". However, the widespread notoriety of Lincoln's address, the unusual wording and its status as the first words of the speech have caused the phrase to enter the public consciousness.
 
 ===Phrase===
-#{{idiomatic}} As an [[opener]], a sometimes sarcastic [[signal phrase]] to indicate a past event being mentioned is particularly important.
+#{{idiomatic}} As an [[opener]], a sometimes sarcastic [[indicator]] to indicate a past event being mentioned is particularly important.
 #{{literally}}{{obsolete}} 27 [[year]]s prior to [[today]].
