--- a/en/s/socialized medicine.803564.wikitext
+++ b/en/s/socialized medicine.803564.wikitext
@@ -1,4 +1,4 @@
 {{wikipedia}}
 ==English==
 ===Idiom===
-#A politically charged description of [[government]]-run [[health care]] used by its opponents to emphasize the perceived link to [[socialism]].
+#{{US|politics}} A politically charged description of [[government]]-run [[health care]] used by its opponents to emphasize the perceived link to [[socialism]].
