/* English */ <frontal sinus#3248231>

--- a/en/f/frontal sinus.803576.wikitext
+++ b/en/f/frontal sinus.803576.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{anatomy}} A [[sinus]] situated behind the superciliary arches.
+# {{anatomy}} A [[paranasal sinus]] situated behind the superciliary arches.
 
 ====Translations====
 {{trans-top|sinus}}
