--- a/en/f/frontal sinus.803576.wikitext
+++ b/en/f/frontal sinus.803576.wikitext
@@ -1,7 +1,7 @@
 ==English==
 {{wikipedia}}
 ===Noun===
-{{en-noun}}
+'''[[frontal]] [[sinus]]'''
 
 # {{anatomy}} A [[paranasal sinus]] situated behind the superciliary arches.
 
