--- a/en/s/sleuthy.803532.wikitext
+++ b/en/s/sleuthy.803532.wikitext
@@ -1,5 +1,6 @@
-sleuthy: Of or capable of being a sleuth; detective.
+==English==
 
-Nancy Drew solved the case via her sleuthy tactics towards vigilance.
+===Adjective===
+{{en-adj|-|-}}
 
-(source: urbandictionary.com)
+# {{slang|nonstandard}} [[sleuthlike]]; of or in the manner of a [[sleuth]].
