--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -9,6 +9,12 @@ Japanese “Luck of Heaven”
 
 # A [[Japanese]] [[manufacturer]] known for its [[games console]]s, founded in 1989.
 # {{context|historically}} [[w:Nintendo Entertainment System|Nintendo Entertainment System]].
+#* '''1995''', David Gladstone, ed., ''British Social Welfare: Past, Present, and Future'', page 274
+#*: There is nothing wrong with the accoutrements of personal affluence, but if the numbers of personal stereos, '''Nintendos''', mobile phones and cars grow […].
+#* '''2005''', Lila Abu-Lughod, ''Dramas of Nationhood: The Politics of Television in Egypt'', page 280
+#*: These professionals are the sort whose children play with '''Nintendos''' and own bikes 
+#* '''2005''', Larry L. Meyer, ''No Paltry Thing: Memoirs Of A Geezer Dad'', page 128
+#*: Franz: “How do elves make '''Nintendos'''?” Dad: “You ask all the hard questions, don't you? I really don't know.”
 #* '''2007''', Ilene Schneider, ''Chanukah Guilt'', page 106
 #*: The only message at home was from my nephew, letting me know my mother was back home, safe and sound, except for a sore "'''Nintendo''' thumb".
 
