--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -44,7 +44,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 * [[decennium]]
 * [[delirium]]
 * [[desideratum]]
-* [[erratum]] (''cf. {{G.}} [[Irrtum]])
+* [[erratum]] (''cf. German [[Irrtum]])
 * [[fatum]]
 * [[forum]]
 * [[gymnasium]]
