--- a/en/v/virtual darkness.803315.wikitext
+++ b/en/v/virtual darkness.803315.wikitext
@@ -7,4 +7,7 @@
 
 
 ===References===
-*The words have been used in a paper by Phelps PMID 17637502 and in the Wikipedia subject "Dark Therapy".[[User:Rhansler|Rhansler]] 13:59, 5 November 2007 (UTC) Rhansler
+*The words have been used in a paper by Phelps PMID 17637502.
+
+===See also===
+* [[w:Dark therapy|Dark therapy]] - Wiktionary article on use of virtual darkness
