--- a/en/v/virtual darkness.803315.wikitext
+++ b/en/v/virtual darkness.803315.wikitext
@@ -3,8 +3,10 @@
 ===Noun===
 {{en-noun}}
 
-# A condition in which the sensors in the eye that control the biological clock are not activated , but in which the  sensors in the eye that produce vision are able to function well enough to carry on normal evening activities such as reading.
-
+# An environment that has some of the physiological effects of [[darkness]].
+# A condition in which the sensors in the eye that control the biological clock are not activated , but in which the  sensors in the eye that produce vision are able to function well enough to carry on normal evening activities such as reading.{{rfv-sense}}
+#: '''2007''', ''
+#*: "'''[V]irtual darkness'''" may be achievable by blocking blue wavelengths of light. […]. Therefore it may be possible to influence human [[circadian rhythms]] by using these lenses at night to blunt the impact of electrical light, particularly the blue light of ubiquitous television screens, by creating a "[[virtual darkness]]".
 
 ===References===
 *The words have been used in a paper by Phelps PMID 17637502.
