/* Related terms */ + 2 terms <minimum#3250975>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -13,7 +13,9 @@ Latin ''[[minim]]'' small + ''[[-um]]''
 *[[maximum]]
 
 ====Related terms====
+*[[bare minimum]]
 *[[minimize]]
+*[[moral minimum]]
 
 ====Translations====
 {{top}}
