--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -10,25 +10,25 @@ Latin ''[[minim]]'' small + ''[[-um]]''
 # [[lowest]] [[limit]]
 
 ====Antonyms====
-*[[maximum]]
+* [[maximum]]
 
 ====Related terms====
-*[[bare minimum]]
-*[[minimize]]
-*[[moral minimum]]
+* [[bare minimum]]
+* [[minimize]]
+* [[moral minimum]]
 
 ====Translations====
 {{top}}
-*Chinese: [[最小]] (zui xiao, zui4 xiao3), [[極小值]] (zuixiaozhi, zui4xiao3zhi2)
-*Finnish: [[minimi]]
-*French: [[minimum#French|minimum]]
-*German: [[Minimum]] {{n}}
+* Chinese: [[最小]] (zui xiao, zui4 xiao3), [[極小值]] (zuixiaozhi, zui4xiao3zhi2)
+* Finnish: [[minimi]]
+* French: [[minimum#French|minimum]]
+* German: [[Minimum]] {{n}}
 {{mid}}
-*Japanese: [[最小]] (saishou), [[最低]] (saitei), [[極小]] (kyokushou)
-*Latin: [[minimum#Latin|minimum]]
-*Romanian: [[minimum#Romanian|minimum]]
-*Swedish: [[minimum#Swedish|minimum]] {{n}}
-*Telugu: [[కనిష్టం]] (kanishTaM)
+* Japanese: [[最小]] (saishou), [[最低]] (saitei), [[極小]] (kyokushou)
+* Latin: [[minimum#Latin|minimum]]
+* Romanian: [[minimum#Romanian|minimum]]
+* Swedish: [[minimum#Swedish|minimum]] {{n}}
+* [[Telugu]]: [[కనిష్టం]] (kanishTaM)
 {{bottom}}
 
 [[Category:English nouns with irregular plurals]]
