iwiki +de, fr, io, ru <Dinkel#3251626>

--- a/en/d/Dinkel.803423.wikitext
+++ b/en/d/Dinkel.803423.wikitext
@@ -4,3 +4,8 @@
 {{de-noun-m|genitive=Dinkels|plural=Dinkel}}
 # [[spelt]], [[Triticum spelta]]
 [[Category:de:Grains]]
+
+[[de:Dinkel]]
+[[fr:Dinkel]]
+[[io:Dinkel]]
+[[ru:Dinkel]]
