--- a/en/s/socialized medicine.803564.wikitext
+++ b/en/s/socialized medicine.803564.wikitext
@@ -1,4 +1,6 @@
 {{wikipedia}}
 ==English==
-===Idiom===
-#{{US|politics}} A politically charged description of [[government]]-run [[health care]] used by its opponents to emphasize the perceived link to [[socialism]].
+===Noun===
+'''[[socialized]] [[medicine]]'''
+#An [[umbrella term]] for any system of [[government]]-run [[health care]].
+#{{US|politics}} A politically charged term used to contrast such systems with [[free market]] alternatives and emphasize the perceived link to [[socialism]].
