--- a/en/s/socialized medicine.803564.wikitext
+++ b/en/s/socialized medicine.803564.wikitext
@@ -3,4 +3,4 @@
 ===Noun===
 '''[[socialized]] [[medicine]]'''
 #An [[umbrella term]] for any system of [[government]]-run [[health care]].
-#{{US|politics}} A politically charged term used to contrast such systems with [[free market]] alternatives and emphasize the perceived link to [[socialism]].
+#{{US|politics|idiomatic}} A politically charged term used to contrast such systems with [[free market]] alternatives and emphasize the perceived link to [[socialism]].
