--- a/en/c/colluvium.803610.wikitext
+++ b/en/c/colluvium.803610.wikitext
@@ -5,3 +5,7 @@
 {{en-noun|colluvia}}
 
 #{{geology}} A loose accumulation of [[rock]] and [[soil]] [[debris]] at the foot of a slope
+
+[[ar:colluvium]]
+[[id:colluvium]]
+[[zh:colluvium]]
