/* English */ Reformat <call-out#3252527>

--- a/en/c/call-out.802361.wikitext
+++ b/en/c/call-out.802361.wikitext
@@ -1,7 +1,7 @@
 ==English==
-===Noun===
-{{alternative spelling of|call out}}
 
+===Noun===
 {{en-noun}}
 
-# (''graphic arts'') A caption or label
+# {{alternative spelling of|call out}}
+# (''graphic arts'') A [[caption]] or [[label]]
