--- a/en/m/money bag.720269.wikitext
+++ b/en/m/money bag.720269.wikitext
@@ -3,7 +3,10 @@
 ===Noun===
 {{en-noun}}
 
-# A [[bag]], normally with a [[drawstring]], used for holding [[money]]
-# {{in plural}} A [[wealthy]] person
+# A [[bag]], normally with a [[drawstring]], used for holding [[money]].
+# {{in plural}} A [[wealthy]] person.
+
+===Anagrams===
+*[[bogeyman]]
 
 [[zh:moneybag]]
