--- a/en/m/malapportionment.803562.wikitext
+++ b/en/m/malapportionment.803562.wikitext
@@ -5,3 +5,5 @@
 ===Noun===
 {{en-noun|-}}
 #{{politics}} Any [[system]] where one group has significantly more [[influence]] than another, such as when voting [[district]]s are unevenly spread out across a [[population]] (cf. [[gerrymandering]]).
+
+[[vi:malapportionment]]
