--- a/en/m/miss out.802552.wikitext
+++ b/en/m/miss out.802552.wikitext
@@ -5,3 +5,5 @@
 #{{idiom}} To miss an experience or lose an opportunity, etc. that should not be missed.
 #:''Anybody who does not try the homemade ice cream is really '''missing out'''.''
 #:''I think he's going to '''miss out''' on the opportunity to date her if he doesn't hurry.''
+
+[[pt:miss out]]
