--- a/en/p/palet.803129.wikitext
+++ b/en/p/palet.803129.wikitext
@@ -15,3 +15,10 @@ Derived from the [[English]], "[[plate]]".
 [[Category:hif:Objects]]
 [[Category:hif:English derivations]]
 ----
+
+[[et:palet]]
+[[fr:palet]]
+[[ru:palet]]
+[[vi:palet]]
+[[tr:palet]]
+[[vo:palet]]
