--- a/en/x/X factor.802821.wikitext
+++ b/en/x/X factor.802821.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun}}
 
-# {{idiom}} A [[factor]] with unknown and/or unforeseeable circumstances.
+# {{idiom}} An unknown influence; a [[factor]] with unknown and/or unforeseeable consequences.
 # [[prothrombinase]], also called [[factor X]].
