--- a/en/x/X factor.802821.wikitext
+++ b/en/x/X factor.802821.wikitext
@@ -3,5 +3,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{idiom}} An unknown influence; a [[factor]] with unknown and/or unforeseeable consequences.
+# {{idiom}} An unknown influence; a [[factor]] with unknown or unforeseeable consequences.
+#* '''1992''', Lia Matera, ''Prior Convictions'', page 121
+#*: We slid into our office, past two women discussing the "'''X factor'''," an apparently undefined quality their firm felt they lacked.
 # [[prothrombinase]], also called [[factor X]].
