--- a/en/x/X factor.802821.wikitext
+++ b/en/x/X factor.802821.wikitext
@@ -6,6 +6,8 @@
 # {{idiom}} An unknown or hard-to-define influence; a [[factor]] with unknown or unforeseeable consequences.
 #* '''1992''', Lia Matera, ''Prior Convictions'', page 121
 #*: We slid into our office, past two women discussing the "'''X factor'''," an apparently undefined quality their firm felt they lacked.
+#* '''1999''', Joel R. DeLuca, ''Political Savvy: Systematic Approaches to Leadership Behind the Scenes'', page 75
+#*: The map can be misleading. It can appear to contain all the relevant information, but in real life, there is always an '''X factor'''.
 #* '''2007''', Tasmina Perry, ''Daddy's Girls'', page 12
 #*: And put him on an LA film set and he glowed with that indefinable '''X-factor''' that agents the world over wished they could bottle.
 # [[prothrombinase]], also called [[factor X]].
