--- a/en/p/preprint.801967.wikitext
+++ b/en/p/preprint.801967.wikitext
@@ -5,3 +5,5 @@
 {{en-noun}}
 
 # A [[preliminary]] form of a [[scientific]] [[paper]] that has not yet been [[published]] in a [[journal]]
+
+[[vi:preprint]]
