--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -23,10 +23,11 @@ Latin ''[[minim]]'' small + ''[[-um]]''
 * Finnish: [[minimi]]
 * French: [[minimum#French|minimum]]
 * German: [[Minimum]] {{n}}
-{{mid}}
 * Japanese: [[最小]] (saishou), [[最低]] (saitei), [[極小]] (kyokushou)
+{{mid}}
 * Latin: [[minimum#Latin|minimum]]
 * Romanian: [[minimum#Romanian|minimum]]
+* Russian: [[минимум]]
 * Swedish: [[minimum#Swedish|minimum]] {{n}}
 * [[Telugu]]: [[కనిష్టం]] (kanishTaM)
 {{bottom}}
