--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -27,7 +27,7 @@ Latin ''[[minim]]'' small + ''[[-um]]''
 {{mid}}
 * Latin: [[minimum#Latin|minimum]]
 * Romanian: [[minimum#Romanian|minimum]]
-* Russian: [[минимум]]
+* Russian: [[минимум]] {{m}}
 * Swedish: [[minimum#Swedish|minimum]] {{n}}
 * [[Telugu]]: [[కనిష్టం]] (kanishTaM)
 {{bottom}}
