--- a/en/h/have it large.802701.wikitext
+++ b/en/h/have it large.802701.wikitext
@@ -1,7 +1,6 @@
 ==English==
 ===Phrase===
-'''[[have]] [[it]] [[large]]'''
-
+{{en-verb|sg=[[has]] [[it]] [[large]]|has it large|having it large|had it large}}
 # {{idiom}} To engage intensely in pleasure-seeking activities
 #* '''1999''', Mick Middles, ''Manic Street Preachers'', page 193
 #*: Unlike Oasis, the point wasn't simply to ''''have it large'''' and live a whacked-out existence as professional rock stars.
