/* Phrase */ <have it large#3263978>

--- a/en/h/have it large.802701.wikitext
+++ b/en/h/have it large.802701.wikitext
@@ -1,5 +1,5 @@
 ==English==
-===Phrase===
+===Verb===
 {{en-verb|sg=[[has]] [[it]] [[large]]|has it large|having it large|had it large}}
 # {{idiom}} To engage intensely in pleasure-seeking activities
 #* '''1999''', Mick Middles, ''Manic Street Preachers'', page 193
