/* Translations */ Modifying portuguese, 'take advantage' best translated as 'aproveitar' <seize#3264030>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -39,7 +39,7 @@
 *Latin: [[capere]]
 *Norwegian: [[gripe]]
 *Old English: [[niman]]
-*Portuguese: [[agarrar]]
+*Portuguese: [[agarrar]], [[capturar]]
 *Russian: [[захватывать]] (zaχvátyvat’)
 *Spanish: [[agarrar]]
 *Swedish: [[gripa]], [[fånga]]
@@ -52,7 +52,7 @@
 {{trans-mid}}
 *French: [[saisir]]
 *Norwegian: [[gripe]]
-*Portuguese: [[capturar]]
+*Portuguese: [[aproveitar]]
 {{trans-bottom}}
 
 ----
