--- a/en/d/due course.801536.wikitext
+++ b/en/d/due course.801536.wikitext
@@ -1,7 +1,7 @@
 == English ==
 {{rft|Is this an idiom? or Is only "in due course" an idiom?}}
 === Idiom ===
-'''[[due]] [[course]]'''
+{{en-noun|sg=[[due]] [[course]]}}
 
 # {{idiom}} Regular or appropriate passage or occurence
 #* ''a''. '''1399''', Geoffrey Chaucer, ''The Canterbury Tales''
