--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -38,7 +38,7 @@
 *[[Afrikaans]]: [[vark]]
 *Albanian: [[derr]]
 *[[Amuzgo]]: [[kítzku]]
-*Arabic: {{ARchar|[[خنزير]]}} (χanzí:r) {{m}}
+*Arabic: {{Arab|[[خنزير]]}} (xanzīr) {{m}}
 *Aramaic:
 *:Syriac: [[ܚܙܝܪܐ]] (khzīrā, khzīro) {{m}}, [[ܚܙܝܪܬܐ]] (khzīrtā, khzīrto) {{f}}
 *:Aramaic: [[חזירא]] (khzīrā, khzīro) {{m}}, [[חזירתא]] (khzīrtā, khzīrto) {{f}}
@@ -60,12 +60,12 @@
 *[[Erzya]]: [[туво]] (tuvo)
 *Esperanto: [[porko]]
 *Estonian: [[siga#Estonian|siga]]
-*Faroese: [[svín]]
+*Faroese: [[svín]] {{n}}
 *Finnish: [[sika#Finnish|sika]]
 *French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 *[[Frisian]]: [[baarch]]
-*[[Friulian]]: [[purcit]]
-*[[Galician]]: [[porco#Gallegan|porco]]
+*[[Friulian]]: [[purcit]] {{m}}
+*[[Galician]]: [[porco#Gallegan|porco]] {{m}}
 *German: [[Schwein]] {{n}}
 *Greek: [[γουρούνι]] (gurúni) {{n}}, [[χοίρος]] (khíros) {{m}}
 *Hebrew: [[חזיר]] (hazír) {{m}}
@@ -81,29 +81,29 @@
 *Korean: [[돼지]] (dwaeji)
 *Kurdish: {{KUchar|[[به‌راز]]}}
 *[[Ladin]]: [[porcel]]
-*Latin: [[sus]], [[porcus]] <!--do not put the scientific name here-->
-{{trans-mid}}
+*Latin: [[sus]] {{c}}, [[porcus]] {{m}}<!--do not put the scientific name here-->
 *Latvian: [[cūka]] {{f}}
 *Lithuanian: [[kiaulė]]
-*[[Lower Sorbian]]: [[swinja]]
+*[[Lower Sorbian]]: [[swinja]] {{f}}
+{{trans-mid}}
 *[[Macedonian]]: [[свиња]] (svinja) {{f}}
 *Malay: [[babi]], [[khinzir]]
 *[[Malayalam]]: [[പന്നി]] (panni)
-*Maltese: [[ħanżir]]
+*Maltese: [[ħanżir]] {{m}}
 *Maori: [[poaka]]
 *Norwegian: [[svin]] {{n}}, [[gris]] {{m}}
-*[[Occitan]]: [[pòrc]]
+*[[Occitan]]: [[pòrc]] {{m}}
 *Persian: {{FAchar|[[خوک]]}} (khuk)
 *Polish: [[świnia]] {{f}}
 *Portuguese: [[porco#Portuguese|porco]] {{m}}
 *[[Proto-Polynesian]]: *puaka
-*Romanian: [[porc#Romanian|porc]]
+*[[Romani]]: [[balo]] {{m}}, [[bali]] {{f}}
+*Romanian: [[porc#Romanian|porc]] {{m}}
 *[[Romansh]]: [[portg]]
-*[[Romany]]: [[balo]] {{m}}, [[bali]] {{f}}
 *Russian: [[свинья]] (svin’já) {{f}}
 *[[Sami]]: [[spiidni]]
-*Sardinian (northern): [[porcu]], [[mannale]] {{m}}, [[sue]] {{f}}
-*Sardinian (southern): [[procu]], [[mannali]] {{m}}, [[sue]] {{f}}
+*Sardinian (northern): [[porcu]] {{m}}, [[mannale]] {{m}}, [[sue]] {{f}}
+*Sardinian (southern): [[procu]] {{m}}, [[mannali]] {{m}}, [[sue]] {{f}}
 *[[Scottish Gaelic]]: [[muc]] {{f}}
 *Serbian:
 *:Cyrillic: [[свиња#Serbian|свиња]] {{f}}
@@ -112,7 +112,7 @@
 *Slovene: [[svinja]] {{f}}, [[prašič]] {{m}}, [[pujs]] {{m}}
 *Spanish: [[cerdo]] {{m}}, [[chancho]] {{m}} {{italbrac|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, [[chon]] {{m}} {{italbrac|Northern Central Spain}}, [[coche]] {{m}} {{italbrac|Guatemala}}, [[cochi]] {{m}} {{italbrac|Northwestern Mexico}}, [[cochín]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[cochino]] {{m}} {{italbrac|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, [[cocho]] {{m}} {{italbrac|Northern Spain|specifically Leon}}, [[cuto]] {{m}} {{italbrac|Northern Spain - specifically Aragon, La Rioja and Navarra}}, [[gocho]] {{m}} {{italbrac|Northern Spain|spefically Asturias and Leon}}, [[gorrino]] {{italbrac|Southern Central and Eastern Central Spain}}, [[guarro]] {{m}} {{italbrac|Western Spain|specifically Extremadura}}, [[marrano]] {{m}} {{italbrac|Central and Western Venezuela|Colombia}}, [[puerco]] {{m}} {{italbrac|Caribbean Islands|Costa Rica|Mexico|Panama}}, [[tocino]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[tunco]] {{m}} {{italbrac|El Salvador}}
 *Swahili: [[nguruwe]]
-*Swedish: [[gris]], [[svin]]
+*Swedish: [[gris]] {{c}}, [[svin]] {{n}}
 *[[Tagalog]]: [[baboy]]
 *[[Telugu]]: [[పంది]] (paMdi)
 *[[Tok Pisin]]: [[pik]]
