--- a/en/w/whatever it takes.775539.wikitext
+++ b/en/w/whatever it takes.775539.wikitext
@@ -1,8 +1,16 @@
 {{rfd}}
 ==English==
-===Phrase===
-'''[[whatever]] [[it]] [[takes]]'''
-#[We] stand ready to do whatever it takes to accomplish this purpose.
+===Noun===
+{{en-noun|sg=[[whatever]] [[it]] [[takes]]|}}
+# Anything that may be required to achieve an objective.
+* We stand ready to do '''whatever it takes'''.
+
+===Interjection===
+# Strong affirmation of willingness.
+* 
+
+
+
 ==== Translations ====
 * Spanish: [[todo lo que sea  necesario]].
 
