--- a/en/w/whatever it takes.775539.wikitext
+++ b/en/w/whatever it takes.775539.wikitext
@@ -7,7 +7,9 @@
 
 ===Interjection===
 # Strong affirmation of willingness.
-* 
+#* Question: Are you proposing we kidnap the ambassador? 
+#*: Answer: '''Whatever it takes'''. 
+
 
 
 
