/* Noun */ <whatever it takes#3267733>

--- a/en/w/whatever it takes.775539.wikitext
+++ b/en/w/whatever it takes.775539.wikitext
@@ -1,7 +1,7 @@
 {{rfd}}
 ==English==
 ===Noun===
-{{en-noun|sg=[[whatever]] [[it]] [[takes]]|}}
+{{en-noun|sg=[[whatever]] [[it]] [[takes]]|-}}
 # Anything that may be required to achieve an objective.
 * We stand ready to do '''whatever it takes'''.
 
