--- a/en/w/whatever it takes.775539.wikitext
+++ b/en/w/whatever it takes.775539.wikitext
@@ -6,7 +6,7 @@
 * We stand ready to do '''whatever it takes'''.
 
 ===Interjection===
-{{intj}}
+{{en-intj}}
 # Strong affirmation of willingness.
 #* Question: Are you proposing we kidnap the ambassador? 
 #*: Answer: '''Whatever it takes'''. 
