/* Interjection */ Adverb <whatever it takes#3267748>

--- a/en/w/whatever it takes.775539.wikitext
+++ b/en/w/whatever it takes.775539.wikitext
@@ -5,18 +5,13 @@
 # Anything that may be required to achieve an objective.
 * We stand ready to do '''whatever it takes'''.
 
-===Interjection===
-{{en-intj}}
+===Adverb===
+{{en-adv|}}
 # Strong affirmation of willingness.
 #* Question: Are you proposing we kidnap the ambassador? 
 #*: Answer: '''Whatever it takes'''. 
 
-
-
-
 ==== Translations ====
 * Spanish: [[todo lo que sea  necesario]].
-
-
 
 [[Category:English idioms]]
